--- a/talos/src/component/modal/modal.module.scss
+++ b/talos/src/component/modal/modal.module.scss
@@ -139,8 +139,7 @@
 .modalTitle {
     color: var(--modal-header-text);
     font-size: 1rem;
-    margin: 0;
-    margin-left: .3rem;
+    margin: 0 .75rem 0 .3rem;
     text-overflow: ellipsis;
     white-space: nowrap;
     flex: 1;
@@ -148,6 +147,7 @@
     text-transform: capitalize;
     text-shadow: 1px 2px 1px rgba($black-0, 0.25);
     transition: color .35s $adagio-curve;
+    overflow: hidden;
 }
 
 .modalContent {
