--- a/talos/src/component/search/search.module.scss
+++ b/talos/src/component/search/search.module.scss
@@ -35,6 +35,9 @@
     --search-highlight-bg: #{$primary-accent-4};
 }
 
+.searchContainer * {
+    overscroll-behavior: auto;
+}
 .searchContainer {
     width: 100%;
     margin-bottom: 1rem;
@@ -247,6 +250,7 @@
         overflow-y: auto;
         overscroll-behavior: contain;
         padding: 0 .75rem;
+        padding-bottom: 1.5rem;
         scrollbar-width: none;
         opacity: 0;
         transform: translateY(-3px);
